# wodonga

./: .pre-commit-config.yaml  modd.conf  pyproject.toml  setup_macos.sh  uninstall.sh
darwin-firewall/: Cargo.toml
darwin-firewall/src/: main.rs
devprox/: service.py  tcp.py
wodonga/: __main__.py  data.py  install.py  service.py  service_loader.py  service_test.py  tcp.py
wodonga/platform/: __init__.py  darwin.py
