[tool.poetry]
name = "devprox"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <l@leigh.net.au>"]

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.14.0"
pytest = "^5.4.2"
pytest-trio = "^0.5.2"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
