[tool.poetry]
name = "devprox"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <l@leigh.net.au>"]

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.15.1"
pytest = "^5.4.2"
pytest-trio = "^0.5.2"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
pycco = "^0.6.0"
watchdog = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
